readdr font awesome

--- a/templates/dash/dashbase.html
+++ b/templates/dash/dashbase.html
@@ -14,7 +14,7 @@
 
     <link rel="shortcut icon" type="image/png" href="{% static 'img/favicon/favicon.ico' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap/bootstrap.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'fonts/font-awesome.min.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/fonts/font-awesome.min.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'css/dashboard/dashboard.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'css/dashboard/customDash.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'css/dashboard/cards.css' %}" />
