--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap/bootstrap.css' %}" />
+    <!-- <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" /> -->
     <link rel="stylesheet" type="text/css" href="{% static 'css/custom/custom.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'css/custom/ghost.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'css/custom/modal.css' %}" />
@@ -67,7 +68,7 @@
             <a id="footer">2016 by Muh Fikri Khaidir</span> </a>
         </div>
     </div>
-    <!-- <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script> -->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
     <script src="{% static 'js/jquery/jquery.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
 
