--- a/templates/dash/dashbase.html
+++ b/templates/dash/dashbase.html
@@ -17,16 +17,17 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/fonts/font-awesome.min.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'css/dashboard/dashboard.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'css/dashboard/customDash.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'css/dashboard/cards.css' %}" />
+    <!-- <link rel="stylesheet" type="text/css" href="{% static 'css/dashboard/cards.css' %}" /> -->
     <link rel="stylesheet" type="text/css" href="{% static 'css/dashboard/profile.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'css/custom/modal.css' %}" /> {% block styles %} {% endblock styles %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/custom/modal.css' %}" />
+    {% block styles %} {% endblock styles %}
 
 </head>
 
 <body>
 
 
-    <div class="container-navbar-landing">
+    <div class="container-fluid">
 
 
         <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
