--- a/templates/home.html
+++ b/templates/home.html
@@ -16,7 +16,7 @@ body {
   <h1>Raih Mimpimu !</h1>
   <p><span id='bold'>Beafuzzy membantumu untuk melamar beasiswa dengan penyajian data yang real-time.</span></p>
   <a class="btn ghost-btn" href="{% url 'accounts:about' %}"> SELENGKAPNYA </a>
-  <a class="btn ghost-btn" id ='ghostReg' href="{% url 'accounts:register' %}"> &nbsp;&nbsp;REGISTRASI&nbsp;&nbsp; </a>
+  <a class="btn ghost-btn" id ='ghostReg' href="{% url 'accounts:register' %}"> &nbsp;&nbsp;REGISTRASI&nbsp;&nbsp;&nbsp;&nbsp; </a>
 
 </div>
 
