--- a/static/css/custom/custom.css
+++ b/static/css/custom/custom.css
@@ -33,18 +33,27 @@ html, body {
 }
 
 .navbar {
-    background-color: white;
+    height: 58px !important;
+    z-index: 1030;
+    margin-bottom: 20px !important;
+    background-color: #2196F3;
     border-width: 0px;
     border-radius: 0 !important;
     -moz-border-radius: 0 !important;
     padding-right: 55px;
-    padding-left: 80px;
+    padding-left: 20px;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
-
+.navbar-brand {
+    float: left;
+    height: 50px;
+    padding: 9px 5px 0 56px;
+    font-size: 18px;
+    line-height: 8px;
+}
 @media (max-width: 778px) {
     .navbar {
-        background-color: white;
+        background-color: #2196F3;
         border-width: 0px;
         border-radius: 0 !important;
         -moz-border-radius: 0 !important;
@@ -52,32 +61,29 @@ html, body {
         padding-left: 25px;
         box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
     }
+
+    .navbar-brand {
+        padding: 10px 5px 0 5px;
+    }
 }
 
-#navbar-text {
-    font-family: 'WorkSans';
-    font-weight: 400;
-    font-size: 24px !important;
-    color: #616161 !important;
-    padding-right: 30px;
-    padding-left: 30px;
-}
 
-.navbar-brand {
-    float: none;
-}
 
-.navbar-toggle {
-    position: relative;
-    float: right;
-    padding: 9px 10px;
-    margin-top: 23px;
-    margin-right: 15px;
-    margin-bottom: 8px;
-    background-color: transparent;
-    background-image: none;
-    border: 1px solid transparent;
-    border-radius: 4px;
+.navbar-toggle > a > i{
+    color: #E0E0E0;
+
+}
+.btn-navbar,.btn-navbar:hover,.btn-navbar:focus {
+    color: #E0E0E0;
+    background-color: transparent !important;
+    border-color: transparent !important;
+}
+.btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:active.focus, .btn.active.focus {
+    outline: transparent;
+}
+.fa-signout-custom{
+  margin-top: 5px;
+  font-size: 35px;
 }
 
 .navbar-nav> li> a {
