--- a/static/css/dashboard/customDash.css
+++ b/static/css/dashboard/customDash.css
@@ -2,37 +2,19 @@
     font-family: 'RobotoLight';
     src: url('../fonts/Roboto-Light.ttf') format('truetype');
 }
-
 @font-face {
     font-family: 'RobotoRegular';
     src: url('../fonts/Roboto-Regular.ttf') format('truetype');
 }
 
-@font-face {
-    font-family: 'WorkSansLight';
-    src: url('../fonts/WorkSans-Light.ttf') format('truetype');
-}
-
-@font-face {
-    font-family: 'WorkSans';
-    src: url('../fonts/WorkSans-Regular.ttf') format('truetype');
-}
-
-@font-face {
-    font-family: 'WorkSansThin';
-    src: url('../fonts/WorkSans-Thin.ttf') format('truetype');
-}
 
 html, body {
     font-family: "RobotoRegular", sans-serif;
     height: 100% !important;
     margin: 0 !important;
-    background-repeat: no-repeat !important;
-    background-attachment: fixed;
     background-color: white;
 
 }
-
 
 .container-navbar-landing {
     margin-left: 0px !important;
@@ -54,7 +36,7 @@ html, body {
 }
 
 #navbar-text {
-    font-family: 'WorkSans';
+    font-family: 'RobotoLight';
     font-weight: 400;
     font-size: 24px !important;
     color: #616161 !important;
