--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap/bootstrap.css' %}" />
     <!-- <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" /> -->
+    <link rel="stylesheet" type="text/css" href="{% static 'css/fonts/font-awesome.min.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'css/custom/custom.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'css/custom/ghost.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'css/custom/modal.css' %}" />
@@ -23,19 +24,26 @@
         <nav class="navbar navbar-default" role="navigation">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <!-- <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
+        <span class="icon-bar"></span> -->
+        <i class="fa fa-sign-in fa-2x fa-fw" aria-hidden="true"></i>
+
+              </button>
                 <a class="navbar-brand" href="{% url 'accounts:homepage' %}">
                     <img src="{% static 'img/logo1.png' %}" height="40px" width="40px" />
                 </a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="{% url 'accounts:about' %}" id="navbar-text">About</a></li>
-                    <li><a href="#login" id="navbar-text" role="button" data-toggle="modal" data-target="#login-modal">Login</a></li>
+                    <button class="btn btn-navbar dropdown-toggle" type="button" data-toggle="modal" data-target="#login-modal" aria-haspopup="true" aria-expanded="true">
+
+                      <i class="fa fa-sign-out fa-signout-custom fa-fw" aria-hidden="true"></i>
+                      <!-- <span class="caret"></span> -->
+                      </button>
                 </ul>
+
+
             </div>
         </nav>
     </div>
