--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
     <div class='container-navbar-landing'>
         <nav class="navbar navbar-default" role="navigation">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <button type="button" class="btn btn-navbar navbar-toggle" data-toggle="modal" data-target="#login-modal" aria-haspopup="true" aria-expanded="true">
         <!-- <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span> -->
