login mobile and desktop replaced by font awesome

--- a/static/css/dashboard/profile.css
+++ b/static/css/dashboard/profile.css
@@ -10,7 +10,7 @@
 @media (max-width: 778px){
   .profile-sidebar {
     padding: 20px 0 5px 0;
-    margin-top: 0px;
+    /*margin-top: 30px;*/
     background: #FAFAFA;
   }
 }
