--- a/static/css/dashboard/dashboard.css
+++ b/static/css/dashboard/dashboard.css
@@ -5,12 +5,13 @@
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
+    overflow-y:none; //THIS -> ADD
+    max-width:100%;  //THIS -> ADD
 }
 
 #wrapper.toggled {
     padding-left: 250px;
 }
-
 #sidebar-wrapper {
     z-index: 1000;
     position: fixed;
@@ -25,12 +26,9 @@
     -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
 }
-
 #wrapper.toggled #sidebar-wrapper {
     width: 250px;
-
 }
-
 #page-content-wrapper {
     width: 100%;
     position: absolute;
@@ -39,16 +37,11 @@
     z-index: 1020;
     box-shadow: 12px -8px 13px -4px rgba(0,  0, 0, 0.18), -5px -8px 35px -4px rgba(0, 0, 0, 0.18);
 }
-
 #wrapper.toggled #page-content-wrapper {
     position: absolute;
-    margin-right: -250px;
-
-
+    /*margin-right: -250px;*/
 }
-
 /* Sidebar Styles */
-
 .sidebar-nav {
     position: absolute;
     top: 0;
@@ -57,7 +50,6 @@
     padding: 0;
     list-style: none;
 }
-
 .sidebar-nav li {
     text-indent: 20px;
     line-height: 40px;
@@ -114,7 +106,7 @@
 
     #page-content-wrapper {
         padding: 20px;
-        position: relative;
+        position: fixed;;
         margin-top: -24px !important;
         box-shadow: 12px -8px 13px -4px rgba(0,  0, 0, 0.18), -5px -8px 35px -4px rgba(0, 0, 0, 0.18);
     }
