--- a/templates/dash/dash_berita.html
+++ b/templates/dash/dash_berita.html
@@ -1,12 +1,15 @@
-{% extends 'dash/dashbase.html' %} {% load staticfiles %} {% block content %}
+{% extends 'dash/dashbase.html' %}
+{% load staticfiles %}
+{% block content %}
+
 <div class="page-header">
     <h1>Berita & Pengumuman <small>Segala Pemberitaan Mengenai Beasiswa</small></h1>
 </div>
-<div class="col-md-1">
+<!-- <div class="col-md-1">
 
-</div>
-<div class="col-md-10">
-    <div class="container-fluid">
+</div> -->
+<!-- <div class="col-md-10"> -->
+    <div class="container">
         <div class="panel panel-info">
             <div class="panel-body">
                 <h2>Seorang Mahasiswa Tewas Saat Mengerjakan TA</h2>
@@ -16,8 +19,8 @@
                     quaeso, inquam, sitienti in bibendo voluptas?
                 </p>
             </div>
-            <div class="container-fluid">
-                <div class="container-fluid panel-footer"> 31 Desember 2016
+            <div class="container">
+                <div class="container panel-footer"> 31 Desember 2016
                     <div class="pull-right">
                         <span id='btn-berit'<button class="btn btn-info" type="button">Selengkapnya</button></span>
                     </div>
@@ -26,11 +29,50 @@
 
         </div>
     </div>
+    <div class="container">
+        <div class="panel panel-info">
+            <div class="panel-body">
+                <h2>Seorang Mahasiswa Tewas Saat Mengerjakan TA</h2>
+                <div class="divider"></div>
+                <p>
+                    &nbsp;&nbsp;&nbsp;&nbsp;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Idem adhuc; Sed fac ista esse non inportuna; Duo Reges: constructio interrete. Ut nemo dubitet, eorum omnia officia quo spectare, quid sequi, quid fugere debeant? Estne,
+                    quaeso, inquam, sitienti in bibendo voluptas?
+                </p>
+            </div>
+            <div class="container">
+                <div class="container panel-footer"> 31 Desember 2016
+                    <div class="pull-right">
+                        <span id='btn-berit'<button class="btn btn-info" type="button">Selengkapnya</button></span>
+                    </div>
+                </div>
+            </div>
 
-</div>
-<div class="col-md-1">
+        </div>
+    </div>
+    <div class="container">
+        <div class="panel panel-info">
+            <div class="panel-body">
+                <h2>Seorang Mahasiswa Tewas Saat Mengerjakan TA</h2>
+                <div class="divider"></div>
+                <p>
+                    &nbsp;&nbsp;&nbsp;&nbsp;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Idem adhuc; Sed fac ista esse non inportuna; Duo Reges: constructio interrete. Ut nemo dubitet, eorum omnia officia quo spectare, quid sequi, quid fugere debeant? Estne,
+                    quaeso, inquam, sitienti in bibendo voluptas?
+                </p>
+            </div>
+            <div class="container">
+                <div class="container panel-footer"> 31 Desember 2016
+                    <div class="pull-right">
+                        <span id='btn-berit'<button class="btn btn-info" type="button">Selengkapnya</button></span>
+                    </div>
+                </div>
+            </div>
 
-</div>
+        </div>
+    </div>
+<!-- </div> -->
+<!-- <div class="col-md-1">
+
+</div> -->
 
 
 
