--- a/templates/dash/dashbase.html
+++ b/templates/dash/dashbase.html
@@ -27,7 +27,7 @@
 <body>
 
 
-    <div class="container-fluid">
+    <div class="container-navbar-landing">
         <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
             <div class="navbar-header">
                 <a class="navbar-brand" id="menu-toggle" href="#menu-toggle">
@@ -37,8 +37,8 @@
                 <div class="navbar-toggle" data-toggle="collapse">
                     <div class="dropdown">
                         <button class="btn btn-navbar dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                          <i class="fa fa-envelope fa-msg-custom fa-fw" aria-hidden="true"></i>
 
-                        <i class="fa fa-envelope fa-2x fa-fw" aria-hidden="true"></i>
                         <!-- <span class="caret"></span> -->
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
@@ -208,17 +208,17 @@
 
         <!-- Page Content -->
 
-        <!-- <div id="page-content-wrapper"> -->
-        <div class="container-fluid container-content">
+        <div id="page-content-wrapper">
+        <!-- <div class="container">
             <div class="row">
-                <div class="col-lg-12 col-md-12 col-xs-12">
+                <div class="col-lg-12 col-md-12 col-xs-12"> -->
 
                     {% block content %} {% endblock %}
 
-                </div>
+                <!-- </div>
             </div>
+        </div> -->
         </div>
-        <!-- </div> -->
 
 
 
