login mobile and desktop replaced by font awesome

--- a/static/css/dashboard/dashboard.css
+++ b/static/css/dashboard/dashboard.css
@@ -39,7 +39,7 @@
 }
 #wrapper.toggled #page-content-wrapper {
     position: absolute;
-    /*margin-right: -250px;*/
+    margin-right: -250px;
 }
 /* Sidebar Styles */
 .sidebar-nav {
