--- a/static/css/dashboard/customDash.css
+++ b/static/css/dashboard/customDash.css
@@ -13,7 +13,7 @@ html, body {
     height: 100% !important;
     margin: 0 !important;
     background-color: white;
-
+    /*overflow-y: hidden;*/
 }
 
 .container-navbar-landing {
@@ -178,11 +178,15 @@ html, body {
   font-size: 28px;
 }
 
+.list-group {
+    padding-left: 0;
+    margin-bottom: 40px;
+}
+
 .list-group-item {
     position: relative;
     display: block;
     padding: 10px 15px;
-    /*margin-bottom: 3px;*/
      background-color: transparent;
      border: 0px solid #ddd;
 }
