--- a/templates/dash/dashbase.html
+++ b/templates/dash/dashbase.html
@@ -38,8 +38,6 @@
                     <div class="dropdown">
                         <button class="btn btn-navbar dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                           <i class="fa fa-envelope fa-msg-custom fa-fw" aria-hidden="true"></i>
-
-                        <!-- <span class="caret"></span> -->
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
                             <li class="dropdown-header">Pesan Masuk</li>
@@ -60,7 +58,6 @@
                         <button class="btn btn-navbar dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="modal" data-target="#login-modal" aria-haspopup="true" aria-expanded="true">
 
                           <i class="fa fa-sign-out fa-signout-custom fa-fw" aria-hidden="true"></i>
-                          <!-- <span class="caret"></span> -->
                           </button>
                     </div>
                 </div>
@@ -69,15 +66,12 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <!-- <li><a href="dash"><i class="fa fa-envelope fa-2x fa-fw" aria-hidden="true"></i></a></li>
-                    <li><a href="your link here"><i class="fa fa-bell fa-2x fa-fw" aria-hidden="dash"></i></a></li> -->
                     <li>
 
                         <div class="dropdown">
                             <button class="btn btn-navbar dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
 
                               <i class="fa fa-envelope fa-msg-custom fa-fw" aria-hidden="true"></i>
-                              <!-- <span class="caret"></span> -->
                               </button>
                             <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
                                 <li class="dropdown-header">Pesan Masuk</li>
@@ -95,7 +89,6 @@
                             <button class="btn btn-navbar dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
 
                               <i class="fa fa-bell fa-bell-custom fa-fw" aria-hidden="true"></i>
-                              <!-- <span class="caret"></span> -->
                               </button>
                             <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
                                 <li class="dropdown-header">Pemberitahuan</li>
@@ -111,7 +104,6 @@
                         <button class="btn btn-navbar dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="modal" data-target="#login-modal" aria-haspopup="true" aria-expanded="true">
 
                             <i class="fa fa-sign-out fa-signout-custom fa-fw" aria-hidden="true"></i>
-                            <!-- <span class="caret"></span> -->
                             </button>
                     </li>
                 </ul>
@@ -189,23 +181,18 @@
 
         <!-- Page Content -->
 
-        <div id="page-content-wrapper">
-        <!-- <div class="container">
+        <!-- <div id="page-content-wrapper"> -->
+        <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-12 col-md-12 col-xs-12"> -->
+                <div class="col-lg-12 col-md-12 col-xs-12">
 
                     {% block content %} {% endblock %}
 
-                <!-- </div>
+               </div>
             </div>
-        </div> -->
         </div>
-
-
-
-
-
-    </div>
+        <!-- </div> -->
+    </div> <!-- wrapper -->
 
     <!-- <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script> -->
     <script src="{% static 'js/jquery/jquery.js' %}"></script>
