--- a/templates/dash/dashbase.html
+++ b/templates/dash/dashbase.html
@@ -114,8 +114,9 @@
             <div class="modal-dialog">
                 <div class="loginmodal-container">
                     <h1>Anda Yakin Ingin Keluar ?</h1><br>
-
-                    <a class="btn btn-danger" href="{% url 'accounts:logout' %}"><i class="fa fa-sign-out fa-lg"></i> Keluar</a>
+                    <center>
+                    <a class="btn btn-danger" id='logoutBtn' href="{% url 'accounts:logout' %}"><i class="fa fa-sign-out fa-lg"></i> Keluar</a>
+                    </center>
                 </div>
             </div>
         </div>
