Working on news

--- a/templates/dash/dashbase.html
+++ b/templates/dash/dashbase.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/dashboard/profile.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'css/custom/modal.css' %}" />
     {% block styles %} {% endblock styles %}
+    {% block head_extra %} {% endblock head_extra %}
 
 </head>
 
