--- a/templates/dash/dash_berita.html
+++ b/templates/dash/dash_berita.html
@@ -1,25 +1,38 @@
-{% extends 'dash/dashbase.html' %} {% load staticfiles %} {% block content %}
+{% extends 'dash/dashbase.html' %} {% load staticfiles %} {% block styles %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/dashboard/pills.css' %}" /> {% endblock styles %} {% block content %}
+
 <div class="page-header">
     <h1>Berita & Pengumuman <small>Segala Pemberitaan Mengenai Beasiswa</small></h1>
 </div>
+
+{% if user.is_superuser %}
+<div class="container-fluid" id ="containerPills">
+    <div class="col-md-12">
+      <a class="btn btn-info btn-large" href="{% url 'dashboard:adm_berita' %}">
+  <i class="fa fa-plus fa-lg"></i> &nbsp;Buat Berita</a>
+    </div>
+</div>
+{% endif %}
+
 <div class="col-md-1">
 
 </div>
+
+{%for obj in instance%}
 <div class="col-md-10">
     <div class="container-fluid">
         <div class="panel panel-info">
             <div class="panel-body">
-                <h2>Seorang Mahasiswa Tewas Saat Mengerjakan TA</h2>
+                <h2>{{obj.judul|truncatechars:50}}</h2>
                 <div class="divider"></div>
                 <p>
-                    &nbsp;&nbsp;&nbsp;&nbsp;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Idem adhuc; Sed fac ista esse non inportuna; Duo Reges: constructio interrete. Ut nemo dubitet, eorum omnia officia quo spectare, quid sequi, quid fugere debeant? Estne,
-                    quaeso, inquam, sitienti in bibendo voluptas?
+                    &nbsp;&nbsp;&nbsp;&nbsp;{{obj.content|truncatechars:250}}
                 </p>
             </div>
             <div class="container-fluid">
-                <div class="container-fluid panel-footer"> 31 Desember 2016
+                <div class="container-fluid panel-footer"> {{obj.timestamp}}
                     <div class="pull-right">
-                        <span id='btn-berit'<button class="btn btn-info" type="button">Selengkapnya</button></span>
+                        <span id='btn-berit' <button class="btn btn-info" type="button">Baca</button></span>
                     </div>
                 </div>
             </div>
@@ -28,6 +41,7 @@
     </div>
 
 </div>
+{% endfor %}
 <div class="col-md-1">
 
 </div>
