--- a/templates/dash/dash_berita.html
+++ b/templates/dash/dash_berita.html
@@ -1,5 +1,5 @@
 {% extends 'dash/dashbase.html' %} {% load staticfiles %} {% block styles %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/dashboard/pills.css' %}" /> {% endblock styles %} {% block content %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/dashboard/navBtn.css' %}" /> {% endblock styles %} {% block content %}
 
 <div class="page-header">
     <h1>Berita & Pengumuman <small>Segala Pemberitaan Mengenai Beasiswa</small></h1>
@@ -13,14 +13,12 @@
     </div>
 </div>
 {% endif %}
-
-<div class="col-md-1">
-
-</div>
-
 {%for obj in instance%}
-<div class="col-md-10">
+
+
+<div class="col-md-12">
     <div class="container-fluid">
+
         <div class="panel panel-info">
             <div class="panel-body">
                 <h2>{{obj.judul|truncatechars:50}}</h2>
@@ -41,11 +39,8 @@
     </div>
 
 </div>
+
 {% endfor %}
-<div class="col-md-1">
-
-</div>
-
 
 
 {% endblock %}
