--- a/templates/dash/dashbase.html
+++ b/templates/dash/dashbase.html
@@ -13,7 +13,7 @@
     <title>Dashboard</title>
 
     <link rel="shortcut icon" type="image/png" href="{% static 'img/favicon/favicon.ico' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap/bootstrap.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap/bootstrap.min.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'css/fonts/font-awesome.min.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'css/dashboard/dashboard.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'css/dashboard/customDash.css' %}" />
@@ -163,7 +163,7 @@
                     <a class="list-group-item" href="{% url 'dashboard:adm_profile' %}"><i class="fa fa-user fa-fw" aria-hidden="true"></i>&nbsp;&nbsp; Profil Saya</a>
                     <a class="list-group-item" href=""><i class="fa fa-envelope-o fa-fw" aria-hidden="true"></i>&nbsp;&nbsp; Pesan</a>
                     <a class="list-group-item" href="{% url 'dashboard:pengaturan' %}"><i class="fa fa-cogs fa-fw" aria-hidden="true"></i>&nbsp;&nbsp; Pengaturan</a>
-                    <a class="list-group-item" href="{% url 'dashboard:pengaturan' %}"><i class="fa fa-question-circle-o fa-fw" aria-hidden="true"></i>&nbsp;&nbsp; FAQ</a>
+                    <a class="list-group-item" href="{% url 'dashboard:faq' %}"><i class="fa fa-question-circle-o fa-fw" aria-hidden="true"></i>&nbsp;&nbsp; FAQ</a>
                 </div>
                 {% else %}
                 <div class="list-group">
@@ -174,6 +174,7 @@
                     <a class="list-group-item" href="{% url 'dashboard:profile' %}"><i class="fa fa-user fa-fw" aria-hidden="true"></i>&nbsp;&nbsp; Profil Saya</a>
                     <a class="list-group-item" href=""><i class="fa fa-envelope-o fa-fw" aria-hidden="true"></i>&nbsp;&nbsp; Pesan</a>
                     <a class="list-group-item" href="{% url 'dashboard:pengaturan' %}"><i class="fa fa-cogs fa-fw" aria-hidden="true"></i>&nbsp;&nbsp; Pengaturan</a>
+                    <a class="list-group-item" href="{% url 'dashboard:faq' %}"><i class="fa fa-question-circle-o fa-fw" aria-hidden="true"></i>&nbsp;&nbsp; FAQ</a>
                 </div>
                 {% endif %}
 
