--- a/templates/landing/about.html
+++ b/templates/landing/about.html
@@ -1,22 +1,16 @@
-{% extends 'base.html' %}
+{% extends 'landing/base.html' %}
 {% load staticfiles %}
-{% load crispy_forms_tags %}
-
 {% block content %}
 
 <div class="container">
-  <div class="col-md-3">
-  </div>
-  <div class="col-md-6">
-    <h1>{{title}}</h1>
+  <div class="col-sm-6">
+    <h1>Form</h1>
     <hr/>
       <form method='POST' action=''>
-        {% csrf_token %}
-        {{formReg|crispy}}
+
             <button type="submit" class="btn btn-success">Login</Button>
       </form>
-      <div class="col-md-3">
-      </div>
+
 </div>
 
 </div>
