--- a/templates/dash/dash_berita.html
+++ b/templates/dash/dash_berita.html
@@ -1,5 +1,9 @@
-{% extends 'dash/dashbase.html' %} {% load staticfiles %} {% block styles %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/dashboard/navBtn.css' %}" /> {% endblock styles %} {% block content %}
+{% extends 'dash/dashbase.html' %} {% load staticfiles %}
+{% block styles %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/dashboard/navBtn.css' %}" />
+{% endblock styles %}
+
+{% block content %}
 
 <div class="page-header">
     <h1>Berita & Pengumuman <small>Segala Pemberitaan Mengenai Beasiswa</small></h1>
@@ -8,8 +12,8 @@
 {% if user.is_superuser %}
 <div class="container-fluid" id ="containerPills">
     <div class="col-md-12">
-      <a class="btn btn-info btn-large" href="{% url 'dashboard:adm_berita' %}">
-  <i class="fa fa-plus fa-lg"></i> &nbsp;Buat Berita</a>
+      <a class="btn btn-success btn-large" href="{% url 'dashboard:adm_berita' %}">
+  <i class="fa fa-plus fa-lg"></i> &nbsp;Tambah Berita</a>
     </div>
 </div>
 {% endif %}
