--- a/templates/dash/dash_berita.html
+++ b/templates/dash/dash_berita.html
@@ -1,23 +1,43 @@
-{% extends 'dash/dashbase.html' %} {% load staticfiles %}
-{% block styles %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/dashboard/navBtn.css' %}" />
-{% endblock styles %}
-
-{% block content %}
+{% extends 'dash/dashbase.html' %} {% load staticfiles %} {% block styles %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/dashboard/navBtn.css' %}" /> {% endblock styles %} {% block content %}
 
 <div class="page-header">
     <h1>Berita & Pengumuman <small>Segala Pemberitaan Mengenai Beasiswa</small></h1>
 </div>
 
 {% if user.is_superuser %}
-<div class="container-fluid" id ="containerPills">
+<div class="container-fluid" id="containerPills">
     <div class="col-md-12">
-      <a class="btn btn-success btn-large" href="{% url 'dashboard:adm_berita' %}">
-  <i class="fa fa-plus fa-lg"></i> &nbsp;Tambah Berita</a>
+        <div class="mailbox-controls">
+            <!-- Check all button -->
+            <a class="btn btn-success btn-sm" href="{% url 'dashboard:adm_berita' %}">
+                <i class="fa fa-plus fa-lg"></i> &nbsp;Tambah Berita</a>
+            <!-- <button class="btn btn-success btn-sm" data-toggle="modal" data-target="#pesan-modal"><i class="glyphicon glyphicon-pencil"></i> &nbsp; Tulis Pesan</button> -->
+
+            <div class="btn-group">
+                <button class="btn btn-default btn-sm"><i class="glyphicon glyphicon-share-alt"></i></button>
+            </div>
+            <!-- /.btn-group -->
+            <button class="btn btn-default btn-sm"><i class="glyphicon glyphicon-refresh"></i></button>
+            <div class="pull-right">
+
+                <form class="form-inline" method="GET">
+                    <div class="form-group">
+                        <input type="text" id="kunci" name="kunci" class="form-control input-sm" maxlength="30" placeholder="Search" />
+                        <button type="submit" class="btn btn-default btn-sm">Search</button>
+                    </div>
+            </div>
+        </div>
     </div>
+    </form>
 </div>
-{% endif %}
-{%for obj in instance%}
+<!-- /.btn-group -->
+</div>
+<!-- /.pull-right -->
+</div>
+</div>
+
+{% endif %} {%for obj in instance%}
 
 
 <div class="col-md-12">
@@ -44,7 +64,4 @@
 
 </div>
 
-{% endfor %}
-
-
-{% endblock %}
+{% endfor %} {% endblock %}
