--- a/templates/dash/dashbase.html
+++ b/templates/dash/dashbase.html
@@ -163,7 +163,7 @@
                     <a class="list-group-item" href="{% url 'dashboard:listPendaftar' %}"><i class="fa fa-check-square-o fa-fw" aria-hidden="true"></i>&nbsp;&nbsp; Validasi Data</a>
                     <a class="list-group-item" href="{% url 'dashboard:adm_pengumuman' %}"><i class="fa fa-list fa-fw" aria-hidden="true"></i>&nbsp;&nbsp; Pilih Kandidat</a>
                     <a class="list-group-item" href="{% url 'dashboard:adm_profile' %}"><i class="fa fa-user fa-fw" aria-hidden="true"></i>&nbsp;&nbsp; Profil Saya</a>
-                    <a class="list-group-item" href="{% url 'dashboard:pesan' %}"><i class="fa fa-envelope-o fa-fw" aria-hidden="true"></i>&nbsp;&nbsp; Pesan</a>
+                    <a class="list-group-item" href="{% url 'dashboard:adm_pesan' %}"><i class="fa fa-envelope-o fa-fw" aria-hidden="true"></i>&nbsp;&nbsp; Pesan</a>
                     <a class="list-group-item" href="{% url 'dashboard:pengaturan' %}"><i class="fa fa-cogs fa-fw" aria-hidden="true"></i>&nbsp;&nbsp; Utilitas</a>
                     <a class="list-group-item" href="{% url 'dashboard:faq' %}"><i class="fa fa-question-circle-o fa-fw" aria-hidden="true"></i>&nbsp;&nbsp; FAQ</a>
                 </div>
