done importing reportlab

--- a/templates/dash/dash_pengaturan.html
+++ b/templates/dash/dash_pengaturan.html
@@ -16,8 +16,8 @@
                 <div class="card-content">
                     <p>Cards for display in portfolio style material design by Google.</p>
                 </div>
-
-                <div class="card-action">
+                <a href="{% url 'dashboard:adm_cetak'%}" type="button" class="btn btn-sm btn-primary"><i class="fa fa-check-square"></i>&nbsp;Cetak</a>
+                <div class="card-action"></button>
                     <a href="#" target="new_blank">Link</a>
                     <a href="#" target="new_blank">Link</a>
                     <a href="#" target="new_blank">Link</a>
