--- a/templates/dash/dash_profile.html
+++ b/templates/dash/dash_profile.html
@@ -64,7 +64,7 @@
                 </div>
               </div>
                    <div class="panel-footer">
-                     <a href='' type="button" class="btn btn-sm btn-primary"><i class="fa fa-check-square"></i>&nbsp;Validasi</a>
+                     <a href="{% url 'dashboard:adm_cetak'%}" type="button" class="btn btn-sm btn-primary"><i class="fa fa-check-square"></i>&nbsp;Cetak</a>
                      <span class="pull-right">
                          <a href="edit.html" data-original-title="Edit this user" data-toggle="tooltip" type="button" class="btn btn-sm btn-warning"><i class="fa fa-pencil-square-o"></i>&nbsp;Edit</a>
                          <a data-original-title="Remove this user" data-toggle="tooltip" type="button" class="btn btn-sm btn-danger"><i class="fa fa-trash-o"></i>&nbsp;Delete</a>
