--- a/templates/dash/dash_profile.html
+++ b/templates/dash/dash_profile.html
@@ -20,7 +20,7 @@
               </div>
               <div class="panel-body">
                 <div class="row">
-                  <div class="col-md-3 col-lg-3 " align="center"> <img alt="User Pic" src="{% static 'img/avatar.jpg' %} " class="img-circle img-responsive"> </div>
+                  <div class="col-md-3 col-lg-3 " align="center"> <img alt="User Pic" src="{{user.avatar.url}} " class="img-circle img-responsive"> </div>
 
                   <div class=" col-md-9 col-lg-9 ">
                     <table class="table table-user-information">
