--- a/templates/dash/dashbase.html
+++ b/templates/dash/dashbase.html
@@ -136,7 +136,7 @@
                 <div class="profile-sidebar">
                     <!-- SIDEBAR USERPIC -->
                     <div class="profile-userpic">
-                        <img src="{% static 'img/fikri.jpg' %}" class="img-responsive" alt="">
+                        <img src="{{ava_url}}" class="img-responsive" alt="">
                     </div>
                     <div class="profile-usertitle">
                         <div class="profile-usertitle-name">
