--- a/templates/dash/dash_timeline.html
+++ b/templates/dash/dash_timeline.html
@@ -8,6 +8,7 @@
 {% block content %}
 <div class="page-header">
     <h1>Timeline & Event <small> Penerimaan beasiswa tahun 2017</small></h1>
+    <h4><small class="text-muted"><i class="glyphicon glyphicon-retweet"></i> &nbsp; Update Terakhir Halaman Ini &nbsp; : &nbsp; {{obj.updated}}</small></h4>
 </div>
 
 <div class="container-fluid">
@@ -17,76 +18,67 @@
           <div class="timeline-badge"><i class="fa fa-clock-o"></i></div>
           <div class="timeline-panel">
             <div class="timeline-heading">
-              <h4 class="timeline-title">Pembukaan Pendaftaran & Submisi Data Peserta</h4>
-              <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 11 hours ago via Twitter</small></p>
+              <h4 class="timeline-title">{{obj.j_pendaftaran}}</h4>
+              <h4><small class="text-muted"><i class="glyphicon glyphicon-time"></i> <b>&nbsp;{{obj.t_pendaftaran}}</b></small></h4>
             </div>
             <div class="timeline-body">
-              <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+              <p>&nbsp;&nbsp;&nbsp;&nbsp;{{obj.c_pendaftaran}}</p>
             </div>
           </div>
         </li>
 
         <li class="timeline-inverted">
-          <div class="timeline-badge warning"><i class="glyphicon glyphicon-credit-card"></i></div>
+          <div class="timeline-badge warning"><i class="glyphicon glyphicon-eye-open"></i></div>
           <div class="timeline-panel">
             <div class="timeline-heading">
-              <h4 class="timeline-title">Review Data Oleh Admin</h4>
-              <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 11 hours ago via Twitter</small></p>
+              <h4 class="timeline-title">{{obj.j_review}}</h4>
+              <h4><small class="text-muted"><i class="glyphicon glyphicon-time"></i> <b>&nbsp;{{obj.t_review}}</b></small></h4>
             </div>
             <div class="timeline-body">
-              <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
-              <p>Suco de cevadiss, é um leite divinis, qui tem lupuliz, matis, aguis e fermentis. Interagi no mé, cursus quis, vehicula ac nisi. Aenean vel dui dui. Nullam leo erat, aliquet quis tempus a, posuere ut mi. Ut scelerisque neque et turpis posuere pulvinar pellentesque nibh ullamcorper. Pharetra in mattis molestie, volutpat elementum justo. Aenean ut ante turpis. Pellentesque laoreet mé vel lectus scelerisque interdum cursus velit auctor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ac mauris lectus, non scelerisque augue. Aenean justo massa.</p>
+              <p>{{obj.c_review}}</p>
             </div>
           </div>
         </li>
 
         <li>
-          <div class="timeline-badge danger"><i class="glyphicon glyphicon-credit-card"></i></div>
+          <div class="timeline-badge danger"><i class="glyphicon glyphicon-hourglass"></i></div>
           <div class="timeline-panel">
             <div class="timeline-heading">
-              <h4 class="timeline-title">Seleksi Pendaftar</h4>
-              <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 11 hours ago via Twitter</small></p>
+              <h4 class="timeline-title">{{obj.j_seleksi}}</h4>
+              <h4><small class="text-muted"><i class="glyphicon glyphicon-time"></i> <b>&nbsp;{{obj.t_seleksi}}</b></small></h4>
             </div>
             <div class="timeline-body">
-              <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+              <p>{{obj.c_seleksi}}.</p>
             </div>
           </div>
         </li>
 
 
         <li class="timeline-inverted">
-          <div class="timeline-badge info"><i class="glyphicon glyphicon-floppy-disk"></i></div>
+          <div class="timeline-badge info"><i class="glyphicon glyphicon-saved"></i></div>
           <div class="timeline-panel">
             <div class="timeline-heading">
-              <h4 class="timeline-title">Pengumuman</h4>
+              <h4 class="timeline-title">{{obj.j_pengumuman}}</h4>
+              <h4><small class="text-muted"><i class="glyphicon glyphicon-time"></i> <b>&nbsp;{{obj.t_pengumuman}}</b></small></h4>
             </div>
             <div class="timeline-body">
-              <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+              <p>{{obj.c_pengumuman}}</p>
               <hr>
-              <div class="btn-group">
-                <button type="button" class="btn btn-primary btn-sm dropdown-toggle" data-toggle="dropdown">
-                  <i class="glyphicon glyphicon-cog"></i> <span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu" role="menu">
-                  <li><a href="#">Action</a></li>
-                  <li><a href="#">Another action</a></li>
-                  <li><a href="#">Something else here</a></li>
-                  <li class="divider"></li>
-                  <li><a href="#">Separated link</a></li>
-                </ul>
-              </div>
+                <a type="button" href="{% url 'dashboard:adm_pengumuman' %}" class="btn btn-primary btn-sm btn-info"><i class="glyphicon glyphicon-eye-open"> </i>&nbsp; Lihat Pengumuman</a>
+
             </div>
           </div>
         </li>
 
         <li>
-          <div class="timeline-badge success"><i class="glyphicon glyphicon-thumbs-up"></i></div>
+          <div class="timeline-badge success"><i class="glyphicon glyphicon-education"></i></div>
           <div class="timeline-panel">
             <div class="timeline-heading">
-              <h4 class="timeline-title">Penerimaan</h4>
+              <h4 class="timeline-title">{{obj.j_penerimaan}}</h4>
+            <h4><small class="text-muted"><i class="glyphicon glyphicon-time"></i> <b>&nbsp;{{obj.t_penerimaan}}</b></small></h4>
             </div>
             <div class="timeline-body">
-              <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+              <p>{{obj.c_penerimaan}}</p>
             </div>
           </div>
         </li>
