--- a/templates/adm/adm_profile.html
+++ b/templates/adm/adm_profile.html
@@ -21,7 +21,7 @@
               <div class="panel-body">
                 <div class="row">
                   <div class="col-md-3 col-lg-3 " align="center">
-                  <img alt="User Pic" src="{% static 'img/avatar.jpg' %} "> </div>
+                  <img alt="User Pic" src="{{dataUser.avatar.url}} "> </div>
 
                   <div class=" col-md-9 col-lg-9 ">
                     <table class="table table-user-information">
