--- a/templates/dash/dash_berita.html
+++ b/templates/dash/dash_berita.html
@@ -12,18 +12,18 @@
             <a class="btn btn-success btn-sm" href="{% url 'dashboard:adm_berita' %}">
                 <i class="fa fa-plus fa-lg"></i> &nbsp;Tambah Berita</a>
                 {% endif %}
-            
+
             <div class="pull-right">
 
                 <form class="form-inline" method="GET">
                     <div class="form-group">
-                        <input type="text" id="kunci" name="kunci" class="form-control input-sm" maxlength="30" placeholder="Search" />
-                        <button type="submit" class="btn btn-default btn-sm">Search</button>
+                        <input type="text" id="kunci" name="kunci" class="form-control input-sm" maxlength="30" placeholder="Masukkan Kunci" />
+                        <button type="submit" class="btn btn-default btn-sm">Cari</button>
                     </div>
+                </form>
             </div>
         </div>
     </div>
-    </form>
 </div>
 <!-- /.btn-group -->
 </div>
