--- a/templates/dash/dash_faq.html
+++ b/templates/dash/dash_faq.html
@@ -27,8 +27,8 @@
 
                     <form class="form-inline" method="GET">
                         <div class="form-group">
-                            <input type="text" id="kunci" name="kunci" class="form-control input-sm" maxlength="30" placeholder="Search" />
-                            <button type="submit" class="btn btn-default btn-sm">Search</button>
+                            <input type="text" id="kunci" name="kunci" class="form-control input-sm" maxlength="30" placeholder="Masukkan Kunci" />
+                            <button type="submit" class="btn btn-default btn-sm">Cari</button>
                         </div>
                     </form>
                 </div>
@@ -44,7 +44,7 @@
           <div class="panel panel-default ">
               <div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#{{obj.id}}">
                    <h4 class="panel-title">
-                      <a href="#" class="ing">Q: {{obj.pertanyaan}}</a>
+                      <a href="#" class="ing">Q&nbsp;: {{obj.pertanyaan}}</a>
                 </h4>
 
               </div>
