--- a/templates/adm/adm_pengumuman.html
+++ b/templates/adm/adm_pengumuman.html
@@ -7,39 +7,22 @@
     <h1>Pendaftar Tervalidasi <small>Daftar Lengkap Pelamar Beasiswa Tervalidasi</small></h1>
 </div>
 
-
-<div class="row">
-
-        <nav class="navbar-search query" role="query">
-            <div class="container-fluid">
-                <div class="row row-list-search">
-                <!-- <div class='col-md-1'>
-                </div> -->
-                <div class='col-md-12'>
-
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="javascript:void(0);">Cari Pendaftar</a>
-
-                </div>
-                <div class="collapse navbar-collapse" id="">
-                    <div class="navbar-form navbar-left">
-                        <input type="text" class="form-control" />
-                        <button class="btn btn-default">Cari !</button>
+<div class="container-fluid" id="containerPills">
+    <div class="col-md-12">
+            <div class="pull-right">
+                <form class="form-inline" method="GET">
+                    <div class="form-group">
+                        <input type="text" id="kunci" name="kunci" class="form-control input-sm" maxlength="30" placeholder="Cari Pendaftar" />
+                        <button type="submit" class="btn btn-default btn-sm">Cari</button>
                     </div>
-                    <!-- <button class="btn btn-primary create pull-right">添加账号</button> -->
-                </div>
-
-                </div>
-                <!-- <div class='col-md-1'>
-                </div> -->
-                </div>
-
+                </form>
             </div>
-        </nav>
-        <!-- <div class="col-md-1">
+        </div>
+    </div>
 
-      </div> -->
-        <div class="table-responsive col-md-12">
+<br />
+<div class="row">
+          <div class="table-responsive col-md-12">
             <table class="table table-striped table-hover">
                 <thead>
                     <tr>
@@ -58,19 +41,17 @@
                         {% if obj.diterima %}
                         <td><p><span class="label label-success">Diterima</span></p></td>
                         {% else %}
-                        <td><p><span class="label label-danger">Ditunda</span></p></td>
+                        <td><p><span class="label label-danger">Ditolak</span></p></td>
                         {% endif %}
                         <td><p>{{ obj.prodi }}</p></td>
-                        <td class="col-md-2"><p>
+                        <td class="col-md-1"><p>
                           {% if user.is_superuser %}
                           {% if obj.diterima %}
-                          <button class="btn btn-success" href="" disabled="disabled"><i class="fa fa-check-square-o fa-lg"></i>&nbsp;Terima &nbsp;&nbsp;&nbsp;&nbsp;</button>
+                          <button class="btn btn-success btn-sm" id="btnPengumuman" href="" disabled="disabled"><i class="fa fa-check-square-o fa-lg"></i>&nbsp;Terima &nbsp;</button>
                           {% else %}
-                          <a class="btn btn-success" href="{% url 'dashboard:terima' id=obj.akun %}"><i class="fa fa-check-square-o fa-lg"></i>&nbsp;Terima&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+                          <a class="btn btn-success btn-sm" id="btnPengumuman" href="{% url 'dashboard:terima' id=obj.akun %}"><i class="fa fa-check-square-o fa-lg"></i>&nbsp;Terima&nbsp;</a>
                           {% endif %}
-
-
-                          <a class="btn btn-danger" href="#"><i class="fa fa-pencil-square-o fa-lg"></i>&nbsp;Tolak&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+                          <br /><a class="btn btn-danger btn-sm" id="btnPengumuman"  href="#"><i class="fa fa-pencil-square-o fa-lg"></i>&nbsp;Tolak&nbsp;&nbsp;&nbsp;</a>
                           {% else %}
                           {% endif %}
 
