--- a/templates/dash/dash_pesan.html
+++ b/templates/dash/dash_pesan.html
@@ -18,20 +18,17 @@
                   <div class="mailbox-controls">
                     <!-- Check all button -->
                     <button class="btn btn-success btn-sm" data-toggle="modal" data-target="#pesan-modal"><i class="glyphicon glyphicon-pencil"></i> &nbsp; Tulis Pesan</button>
-                    <button class="btn btn-default btn-sm checkbox-toggle"><i class="glyphicon glyphicon-unchecked"></i></button>
                     <div class="btn-group">
-                      <button class="btn btn-default btn-sm"><i class="glyphicon glyphicon-trash"></i></button>
-                      <button class="btn btn-default btn-sm"><i class="glyphicon glyphicon-arrow-left"></i></button>
-                      <button class="btn btn-default btn-sm"><i class="glyphicon glyphicon-share-alt"></i></button>
                     </div><!-- /.btn-group -->
-                    <button class="btn btn-default btn-sm"><i class="glyphicon glyphicon-refresh"></i></button>
+                    <a href="{% url 'dashboard:pesan' %} " class="btn btn-default btn-sm"><i class="glyphicon glyphicon-refresh"></i></a>
                     <div class="pull-right">
-                      1-50/200
-                      <div class="btn-group">
-                        <button class="btn btn-default btn-sm"><i class="glyphicon glyphicon-arrow-left"></i></button>
-                        <button class="btn btn-default btn-sm"><i class="glyphicon glyphicon-arrow-right"></i></button>
-                      </div><!-- /.btn-group -->
-                    </div><!-- /.pull-right -->
+
+                        <form class="form-inline" method="GET">
+                            <div class="form-group">
+                                <input type="text" id="kunci" name="kunci" class="form-control input-sm" maxlength="30" placeholder="Masukkan Kunci" />
+                                <button type="submit" class="btn btn-default btn-sm">Cari</button>
+                            </div>
+                    </div>
                   </div>
                   <hr>
                   <div class="table-responsive mailbox-messages">
@@ -39,12 +36,15 @@
                       <tbody>
                         <tr>
                   {% for obj in listPesan %}
-                          <td><input type="checkbox"></td>
-                          <td class="mailbox-star"><a href=""><i class="fa fa-star text-yellow"></i></a></td>
-                          <td class="mailbox-name"><a href="read-mail.html">{{obj.pengirim}}</a></td>
+                          <td class="mailbox-name"><a href="read-mail.html">{{obj.pengirim.first_name}} {{obj.pengirim.last_name}}</a></td>
+                          {% if obj.dibaca %}
+                          <td><p><span class="label label-success">Terbaca</span></p></td>
+                          {% else %}
+                          <td><p><span class="label label-danger">Belum Terbaca</span></p></td>
+                          {% endif %}
                           <td class="mailbox-subject">{{obj.subjek}}</td>
                           <td class="mailbox-attachment"></td>
-                          <td class="mailbox-date"><b>{{obj.timestamp}}</b> id :  {{obj.id}}</td>
+                          <td class="mailbox-date"><b>{{obj.timestamp}}</b></td>
                         </tr>
                   {% endfor %}
 
