--- a/templates/adm/adm_pesan.html
+++ b/templates/adm/adm_pesan.html
@@ -14,7 +14,7 @@
 
 <div class="container-fluid">
 	<div class="row">
-    <div class="box-body no-padding">
+		<div class="box-body no-padding">
                   <div class="mailbox-controls">
                     <!-- Check all button -->
                     <button class="btn btn-success btn-sm" data-toggle="modal" data-target="#pesan-modal"><i class="glyphicon glyphicon-pencil"></i> &nbsp; Tulis Pesan</button>
@@ -43,7 +43,7 @@
                       <tbody>
                         <tr>
                   {% for obj in instance %}
-                          <td class="mailbox-name"><a href="read-mail.html">Admin Beafuzzy</a></td>
+                          <td class="mailbox-name"><a href="{% url 'dashboard:baca_pesan' id=obj.id %}">{{obj.pengirim.first_name}} {{obj.pengirim.last_name}}</a></td>
                           {% if obj.dibaca %}
                           <td><p><span class="label label-success">Terbaca</span></p></td>
                           {% else %}
