--- a/templates/dash/dash_profile.html
+++ b/templates/dash/dash_profile.html
@@ -52,8 +52,7 @@
                           <td><a href="mailto:info@support.com">{{akun.email}}</a></td>
                         </tr>
                           <td>Phone Number</td>
-                          <td>123-4567-890(Landline)<br><br>555-4567-890(Mobile)
-                          </td>
+                          <td>{{user.telepon}}</td>
 
                         </tr>
 
@@ -64,9 +63,9 @@
                 </div>
               </div>
                    <div class="panel-footer">
-                     <a href="{% url 'dashboard:adm_cetak'%}" type="button" class="btn btn-sm btn-primary"><i class="fa fa-check-square"></i>&nbsp;Cetak</a>
+                     <a href="{% url 'dashboard:cetak_bukti_daftar'%}" type="button" class="btn btn-sm btn-primary"><i class="fa fa-check-square"></i>&nbsp;Cetak</a>
                      <span class="pull-right">
-                         <a href="edit.html" data-original-title="Edit this user" data-toggle="tooltip" type="button" class="btn btn-sm btn-warning"><i class="fa fa-pencil-square-o"></i>&nbsp;Edit</a>
+                         <a href="{% url 'dashboard:edit_profile' id=user.id %}" data-original-title="Edit this user" data-toggle="tooltip" type="button" class="btn btn-sm btn-warning"><i class="fa fa-pencil-square-o"></i>&nbsp;Edit</a>
                          <a data-original-title="Remove this user" data-toggle="tooltip" type="button" class="btn btn-sm btn-danger"><i class="fa fa-trash-o"></i>&nbsp;Delete</a>
                      </span>
                       </div>
